--- a/style.css
+++ b/style.css
@@ -2,7 +2,12 @@ body {
   text-align: center;
   padding: 5%;
 }
-
+#input-from,
+#input-to,
+#countries-from-select,
+#countries-to-select {
+  height: 18px;
+}
 .allText,
 h1 {
   align-items: center;
@@ -19,10 +24,10 @@ h1 {
 .country-containerI {
   padding: 5%;
 }
-.float-left-flag {
+.float-left-flag-container {
   float: left;
 }
-.float-right-flag {
+.float-right-flag-container {
   float: right;
 }
 .float-center-item {
@@ -39,4 +44,25 @@ h1 {
 }
 #center-item {
   width: 100px;
+}
+
+#btn {
+}
+
+#float-left-flag {
+  display: none;
+}
+#float-right-flag {
+  display: none;
+}
+@media (max-width: 600px) {
+  .center-container {
+    font-size: 10px;
+  }
+  #float-left-flag {
+    width: 50px;
+  }
+  #float-right-flag {
+    width: 50px;
+  }
 }
