--- a/style2.css
+++ b/style2.css
@@ -234,6 +234,22 @@ img {
   text-align: center;
   align-items: center;
 }
+.switch {
+  margin: 15px 15px;
+  border: 4px solid #96c1dd;
+  border-radius: 30%;
+  height: 40px;
+  width: 38px;
+}
+
+div.switch input {
+  background: url(./img/swap-vertical.svg) no-repeat;
+  background-size: 150px;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+  border: none;
+}
 
 .glowing-circle {
   margin: 8px;
