added localstorage logic incomplete

--- a/style2.css
+++ b/style2.css
@@ -226,6 +226,15 @@ img {
   visibility: visible;
 }
 
+.little-text {
+  margin: 0;
+  position: relative;
+  top: -15px;
+  text-align: right;
+  font-size: 6px;
+  box-sizing: border-box;
+}
+
 .market-open {
   display: flex;
   position: absolute;
