--- a/style2.css
+++ b/style2.css
@@ -47,7 +47,7 @@ hr {
 .form {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 15px;
 }
 
 /* Flex Container for Input and Select */
@@ -205,6 +205,12 @@ img {
 
 .bell {
   display: none;
+  width: 50px;
+  height: 30px;
+  margin: 0 auto;
+  text-align: center;
+  padding: 10px 0;
+  box-sizing: content-box;
 }
 .bell-text {
   visibility: hidden;
@@ -216,10 +222,10 @@ img {
   border-radius: 6px;
   padding: 5px 0;
 
-  position: absolute;
+  position: relative;
   z-index: 1;
-  top: 290px;
-  left: 40%;
+  bottom: 65px;
+  right: 95px;
 }
 
 .bell:hover .bell-text {
@@ -237,12 +243,29 @@ img {
 
 .market-open {
   display: flex;
-  position: absolute;
-  top: 90px;
-  right: 190px;
+  width: fit-content;
+  position: relative;
+  top: -20px;
+  right: -450px;
   text-align: center;
   align-items: center;
 }
+#alerts-container {
+  position: absolute;
+  top: 10%;
+  right: 150px;
+  z-index: 1;
+}
+#alerts-container li {
+  border: 1px solid #5485a5a5;
+  border-radius: 10px;
+  background-color: white;
+  padding: 5px 20px;
+  margin: 4px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+/* ----------------------------- */
+
 .switch {
   margin: 15px 15px;
   border: 4px solid #96c1dd;
@@ -281,6 +304,19 @@ div.switch input {
       0 0 40px var(--green), 0 0 50px var(--green);
   }
 }
+@keyframes fadeout {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+.fadeout {
+  animation-name: fadeout;
+  animation-duration: 5s;
+  animation-timing-function: linear;
+}
 
 /* Media Queries */
 
@@ -292,10 +328,6 @@ div.switch input {
     position: relative;
     margin: 0 auto;
   }
-  .market-open {
-    top: 90px;
-    right: 450px;
-  }
 }
 @media (max-width: 900px) {
   .nav {
@@ -305,12 +337,13 @@ div.switch input {
 
     height: 120px;
   }
-  .market-open {
-    top: 150px;
-    right: 110px;
-  }
+
   .bell-text {
-    top: 340px;
+  }
+
+  .market-open {
+    top: -25px;
+    right: -365px;
   }
 }
 @media (max-width: 600px) {
@@ -337,8 +370,8 @@ div.switch input {
   }
 
   .market-open {
-    top: 150px;
-    right: 20px;
+    top: -25px;
+    left: 280px;
   }
 
   .bell,
@@ -346,6 +379,6 @@ div.switch input {
     margin: 0 auto;
   }
   .bell-text {
-    top: 570px;
+    top: -40px;
   }
 }
