terrible bug appeared in alert system

--- a/style2.css
+++ b/style2.css
@@ -329,6 +329,24 @@ div.switch input {
   animation-timing-function: linear;
 }
 
+@keyframes horizontal-shaking {
+  0% {
+    transform: translateX(0);
+  }
+  25% {
+    transform: translateX(5px);
+  }
+  50% {
+    transform: translateX(-5px);
+  }
+  75% {
+    transform: translateX(5px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
 /* Media Queries */
 
 @media (max-width: 1530px) {
