--- a/style2.css
+++ b/style2.css
@@ -7,7 +7,7 @@
 
   --nav: #2980b9;
   --color-bg1: #2980b9;
-  --color-bg2: rgb(2, 46, 221);
+  --color-bg2: #2980b9;
 }
 
 body {
@@ -17,7 +17,7 @@ body {
   padding: 0;
   color: #333;
 
-  background: linear-gradient(to bottom left, #0000ff, #add8e6);
+  background: linear-gradient(to bottom left, var(--color-bg2), #add8e6);
 
   background-size: cover;
 
@@ -58,26 +58,57 @@ hr {
   max-width: 600px;
 }
 
-.main::before {
+.tab-1 {
   content: "";
-  position: absolute;
-  top: 94px;
+  position: relative;
+  top: -38px;
   width: 200px;
   height: 25px;
   background: white;
   border-radius: 25px 0 0 0;
   clip-path: path("M 0 0 L 160 0 C 185 2, 175 16, 200 18 L 0 50 z");
+  margin: none;
+  padding: none;
+  float: center;
 }
-.main::after {
-  content: "";
+.tab-1 h6 {
+  color: #333;
+
   position: absolute;
-  margin-left: 20px;
-  width: 85px;
-  height: 5px;
-  top: 94px;
-  background: #7036e9;
-  border-radius: 0 0 5px 5px;
+  top: -27px;
+  left: 60px;
 }
+
+.tab-2 {
+  content: "";
+
+  position: relative;
+  left: 230px;
+  top: -57px;
+  width: 200px;
+  height: 25px;
+  background-color: rgb(198, 196, 196);
+  border-radius: 25px 0 0 0;
+  clip-path: path("M 0 0 L 160 0 C 185 2, 175 16, 200 18 L 0 50 z");
+
+  float: left;
+}
+.tab-2 h6 {
+  color: #333;
+
+  position: absolute;
+  top: -25px;
+  left: 60px;
+}
+
+#tab-overlay {
+  background-color: white;
+  width: 500px;
+  height: 30px;
+  position: absolute;
+  top: 113px;
+}
+
 .form {
   display: flex;
   flex-direction: column;
@@ -131,7 +162,9 @@ select:focus {
 .btn:hover {
   background-color: #1c5986;
 }
-
+#chartBtn {
+  display: none;
+}
 /* Flag Container Styles */
 .float-flag-container {
   display: flex;
@@ -184,8 +217,8 @@ img {
   padding: 6px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   position: absolute;
-  top: 45%;
-  right: 168px;
+  top: 14.5%;
+  right: 140px;
   border: 17px solid white;
   border-radius: 10px;
 }
@@ -217,14 +250,16 @@ img {
 }
 .tradingview-widget-container {
   position: absolute;
+  z-index: 1;
   top: 113px;
-  right: 30px;
+  text-align: center;
   padding: 15px;
   border-radius: 10px;
   background-color: #fff;
-  width: 400px;
-  height: 278px;
+  width: 600px;
+  height: 478px;
   overflow: hidden;
+  visibility: hidden;
 }
 
 .nav {
@@ -260,6 +295,9 @@ img {
   padding: 10px 0;
   box-sizing: content-box;
   cursor: pointer;
+  position: relative;
+  right: -300px;
+  top: -20px;
 }
 .bell-text {
   visibility: hidden;
@@ -303,17 +341,25 @@ img {
 }
 #saved-alerts-container {
   width: 200px;
-  height: 40px;
+  height: fit-content;
   position: absolute;
-  top: 14%;
+  top: 16%;
   left: 70px;
   z-index: 1;
+  background-color: white;
+  border-radius: 12px;
+  padding: 8px;
 }
 #alerts-container {
   position: absolute;
   top: 10%;
   right: 150px;
   z-index: 1;
+}
+#firstAlert {
+  list-style: none;
+  text-align: center;
+  font-weight: 800;
 }
 #alerts-container li,
 #saved-alerts-container li,
@@ -431,15 +477,17 @@ img {
   place-items: center;
 
   color: #ffffff;
-  background: #009578;
+  background: var(--blue);
   border: none;
   border-radius: 5px 0 0 5px;
   outline: none;
   cursor: pointer;
 
-  position: absolute;
-  top: 160px;
-  left: 28%;
+  position: relative;
+  left: -260px;
+
+  margin: 0;
+  padding: 0;
 }
 
 .side-panel-toggle:hover {
@@ -460,7 +508,7 @@ img {
 
 .switch {
   margin: 15px 15px;
-  border: 4px solid #96c1dd;
+  border: 2px solid #bebebe;
   border-radius: 30%;
   height: 40px;
   width: 38px;
@@ -604,10 +652,6 @@ div.switch input {
   #grid-container {
     position: relative;
   }
-  .tradingview-widget-container {
-    position: relative;
-    margin: 0 auto;
-  }
 
   li {
     display: block;
@@ -620,11 +664,8 @@ div.switch input {
   }
 }
 @media (max-width: 900px) {
-  .main::before {
-    top: 142px;
-  }
-  .main::after {
-    top: 142px;
+  #tab-overlay {
+    top: 160px;
   }
 
   .nav {
@@ -657,31 +698,16 @@ div.switch input {
   }
 }
 @media (max-width: 600px) {
+  #tab-overlay {
+    width: 430px;
+    top: 161px;
+  }
   .container,
   .main,
   #insert-container {
     width: 95%;
   }
-  .main::before {
-    content: "";
-    position: absolute;
-    top: 142px;
-    width: 200px;
-    height: 25px;
-    background: white;
-    border-radius: 25px 0 0 0;
-    clip-path: path("M 0 0 L 160 0 C 185 2, 175 16, 200 18 L 0 50 z");
-  }
-  .main::after {
-    content: "";
-    position: absolute;
-    left: 60px;
-    width: 85px;
-    height: 5px;
-    top: 140px;
-    background: #7036e9;
-    border-radius: 0 0 5px 5px;
-  }
+
   .input-container {
     flex-direction: column;
   }
@@ -702,7 +728,9 @@ div.switch input {
     top: -25px;
     left: 250px;
   }
-
+  .bell {
+    right: -200px;
+  }
   .bell,
   .bell-text {
     margin: 0 auto;
@@ -723,20 +751,35 @@ div.switch input {
   }
 }
 @media (max-width: 430px) {
-  .main::before {
-    top: 127px;
+  html {
+    width: 155%;
   }
-  .main::after {
-    top: 127px;
+
+  .side-panel-toggle {
+    left: -200px;
   }
+  .main {
+    margin: 0 auto;
+    width: 100vw;
+  }
+  #tab-overlay {
+    width: 100%;
+    top: 145px;
+  }
+  #tab-1 {
+    top: -40px;
+    width: 150px;
+  }
+  #tab-2 {
+    top: -60px;
+    left: 180px;
+    width: 150px;
+    transform: scaleX(-1);
+  }
+
   .market-open {
     top: -25px;
     left: 170px;
-  }
-
-  .main {
-    margin: 0;
-    padding: 10px;
   }
 
   .container {
@@ -745,30 +788,20 @@ div.switch input {
     padding: 5px;
     width: 93%;
   }
-  /* 
-  .nav {
-  } */
-  body {
-    width: 100%;
-  }
 
-  .tradingview-widget-container {
-    width: 85%;
-    height: 100%;
-    border-radius: 8px;
-    display: none;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  }
   li {
     display: block;
   }
   #saved-alerts-container {
-    top: 1525px;
-    left: 47px;
+    top: 1212px;
+    left: 300px;
     width: 250px;
   }
   .form {
     padding: 2px;
     margin: 0;
+  }
+  #grid-container {
+    left: -80px;
   }
 }
