--- a/style2.css
+++ b/style2.css
@@ -211,6 +211,10 @@ img {
   font-size: 1.5em;
 }
 
+#decimalSpan {
+  color: #7dcea0;
+}
+
 /* Additional Container Styles */
 #insert-container {
   margin-top: 20px;
@@ -557,6 +561,12 @@ img {
   transform: scale(0.7);
   border: 12px solid white;
   border-radius: 12px;
+}
+
+#logo {
+  position: absolute;
+  top: 20px;
+  left: 30vw;
 }
 /* --------------Switch--------------- */
 
