--- a/style2.css
+++ b/style2.css
@@ -898,7 +898,22 @@ div.switch input {
 }
 @media (max-width: 430px) {
   html {
-    width: 155%;
+    width: 100%;
+  }
+  body {
+  }
+  .nav {
+    display: none;
+  }
+  #tab-overlay,
+  #insert-container {
+    display: none;
+  }
+  #from-tag {
+    margin-top: 100px;
+  }
+  .input-container {
+    display: inline;
   }
 
   #input-from,
@@ -906,15 +921,29 @@ div.switch input {
   #input-amount,
   #input-to,
   #countries-to-select {
-    height: 60px;
+    height: 40px;
+    width: 30%;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
   }
 
   .side-panel-toggle {
     left: -450px;
   }
+  .side-panel-open {
+    display: none;
+  }
+  #saved-alerts-container {
+    display: none;
+  }
   .main {
     margin: 0 auto;
     width: 100vw;
+    margin: 0;
+    padding-top: 0;
+    display: inline;
+    background-color: rgba(255, 255, 251, 0.7);
+
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
   }
   #tab-overlay {
     width: 106%;
@@ -926,30 +955,34 @@ div.switch input {
     width: 200px;
     left: -50px;
     transform: scale(0.6);
+    display: none;
   }
   #tab-2 {
     top: -57px;
     left: 110px;
     width: 200px;
     transform: scale(0.6);
+    display: none;
   }
 
   #tab-3 {
     width: 200px;
     left: 70px;
     transform: scale(0.6);
+    display: none;
   }
 
   .market-open {
     top: -90px;
     left: 240px;
+    display: none;
   }
 
   .container {
     max-width: 500px;
     margin: 0 8%;
-    padding: 5px;
-    width: 93%;
+    padding: 0;
+    width: 85%;
   }
 
   li {
@@ -962,6 +995,10 @@ div.switch input {
   .form {
     padding: 2px;
     margin: 0;
+    gap: 0;
+  }
+  #btn {
+    width: 100px;
   }
   #grid-container {
     left: -130px;
@@ -983,6 +1020,27 @@ div.switch input {
   #disqus_thread {
     width: 143%;
     top: 0;
+  }
+  #result-container {
+    position: absolute;
+    width: 95%;
+
+    font-size: xx-small;
+    padding: 2px;
+  }
+  #float-left-flag,
+  #float-right-flag {
+    border-radius: 10%;
+  }
+  #switch-currency-button {
+    position: absolute;
+    right: 50px;
+    top: 180px;
+    background-color: white;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  }
+  .country-container {
+    margin-bottom: 10px;
   }
 }
 
